# VictoryFairy

./: .gitignore
VitoryFairy_BE/py-collector/: .env.example  .gitignore  CLAUDE.md  Dockerfile.run  README.md  docker-compose.yml  pyproject.toml
VitoryFairy_BE/py-collector/config/: memes.yaml  targets.fmkorea.backfill.yaml  targets.fmkorea.yaml  targets.yaml
VitoryFairy_BE/py-collector/deploy/lambda/: Dockerfile  README.md  build_and_push.sh  handler.py  requirements.txt
VitoryFairy_BE/py-collector/deploy/local/: README.md  backfill_fmkorea.sh  catchup_fmkorea.sh  (+2 more)
VitoryFairy_BE/py-collector/docs/: crawl-deck.html  crawl-flow.md  current-crawl-overview.md  data-formats.md  data-pipeline-requirements.md  directory-structure.md  envelope-format.md
VitoryFairy_BE/py-collector/kbo_collector/: community.py  config.py  db.py  dimensions.py  fetch.py  game_records.py  journal.py  kbo_register.py  keys.py  masking.py  naver.py  run.py  sink.py  stats.py  targets.py
VitoryFairy_BE/py-collector/notebooks/: run_crawler.ipynb
VitoryFairy_BE/py-collector/tests/: conftest.py  test_community_dates.py  test_community_dcinside.py  test_community_fmkorea.py  test_config.py  test_db_sink.py  test_dimensions.py  test_envelope.py  test_exporter.py  test_fetch.py  test_game_records.py  test_journal.py  test_kbo_register.py  test_keys.py  test_lambda_handler.py  test_masking.py  test_meme_dict.py  test_naver.py  test_registry_contract.py  test_run_jobs.py  test_sink.py  test_smoke_import.py  test_sources_base.py  test_sources_wrappers.py  test_stats.py  test_targets.py
(+454 files in other folders)
