[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kbo-collector"
version = "0.1.0"
description = "KBO raw content collector: crawl/API -> raw S3 bronze landing"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.2",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "boto3>=1.34",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
    "PyMySQL>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "moto[s3]>=5.0",
]

[project.scripts]
kbo-collector = "kbo_collector.run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kbo_collector*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
